--- a/application/modules/customer/views/scripts/office/index.phtml
+++ b/application/modules/customer/views/scripts/office/index.phtml
@@ -33,7 +33,7 @@
   <div class="tab-content">
     <div role="tabpanel" class="tab-pane active" id="orders">
         <div class="row">
-            <table id="tasksTable" class="display" cellspacing="0" width="100%">
+       <table id="tasksTable" class="display" cellspacing="0" width="100%">
         <thead>
             <tr>
                 <th>Название</th>
@@ -47,7 +47,7 @@
         <tbody>
             <?php foreach($this->customersTasks as $task){?>
             <tr id="tr<?= $task['id'] ?>">
-                <td><?= $task['title'] ?></td>
+                <td><a href="<?= $this->baseUrl().'/customer/task/view/id/'.$task['id']?>"><?= $task['title'] ?></a></td>
                 <td><?=  date('H:i d-m-Y', $task['created_at'])?></td>
                 <td><?= date('H:i d-m-Y', $task['final_date']) ?></td>
                 <td>
