feedback from performer

--- a/application/modules/customer/views/scripts/office/index.phtml
+++ b/application/modules/customer/views/scripts/office/index.phtml
@@ -120,7 +120,8 @@ $.ajax({
   url: '<?= $this->baseUrl.'/customer/task/remove-task/'; ?>',
   data: {id: id},
   success: function(response){
-      $('#remPrel'+id).show();
+      $('#remPrel'+id).hide();
+      $('#tr'+id).remove();
   }
 });   
 }
