--- a/application/modules/performer/views/scripts/layout.phtml
+++ b/application/modules/performer/views/scripts/layout.phtml
@@ -31,7 +31,7 @@
     <div class="blog-masthead">
       <div class="container">
         <nav class="blog-nav">
-            <a class="blog-nav-item active" href="<?= $this->baseUrl()?>/performer/">Задачи</a>
+            <a class="blog-nav-item active" href="<?= $this->baseUrl()?>/performer/index/tasks">Задачи</a>
           <a class="blog-nav-item" href="#">Сообщения</a>
           <a class="blog-nav-item" href="<?= $this->baseUrl().'/performer/user/'.$this->userId ?>">Кабинет</a>
           <div class="btn-group">
