ok.ru authorization/registration

--- a/application/modules/default/views/scripts/s-auth/index.phtml
+++ b/application/modules/default/views/scripts/s-auth/index.phtml
@@ -8,6 +8,7 @@
     <div class="container">
         <a href="<?= $this->vkLink ?>">VK.com</a></br>
         <a href="<?= $this->fbLink ?>">facebook.com</a></br>
+        <a href="<?= $this->okLink ?>">OK.RU</a></br>
 
     </div>        
 </section>
