--- a/application/modules/customer/views/scripts/office/index.phtml
+++ b/application/modules/customer/views/scripts/office/index.phtml
@@ -108,10 +108,12 @@
     </div>
 </div>
 <script>
-    $(document).ready(function(){
-        $('#tasksTable').DataTable({
-        });
+$(document).ready(function(){
+    $('#tasksTable').DataTable({
     });
+$('#submit').
+
+});
     
 function removeTask(id){
 $('#remPrel'+id).show();
