--- a/application/modules/performer/views/scripts/task/view.phtml
+++ b/application/modules/performer/views/scripts/task/view.phtml
@@ -189,7 +189,7 @@
      });
  });   
  
- function feedback(taskId, custId){
+ function feedback( custId, taskId){
     var feedbackText = $('#feedbackText').val();
     if($('#positive').is(':checked')){
         $('#feedBut').hide();
