--- a/application/modules/default/views/scripts/authentication/log-in.phtml
+++ b/application/modules/default/views/scripts/authentication/log-in.phtml
@@ -6,5 +6,5 @@
        echo $this->form;
              
        ?>
-       
+            <a href="<?= $this->baseUrl() ?>/registration/forgot-pass">Забыли пароль?</a>
         </div>        
